adding the-blend.net and livro-alberto.net to the dancefloor

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -55,5 +55,15 @@ of the organization: "bridging the gap between business and the open source
 Perl community".
 </li>
 
+<li>
+<a href="http://www.the-blend.net/">The-Blend.net</a> blends new music, artists
+and reviews to make music a fun, comfortable and beautiful thing.
+</li>
+
+<li>
+<a href="http://www.livro-aberto.net/">Livro-Aberto</a> is a website in
+Portuguese.
+</li>
+
 </ul>
 
