add Schwern quote

--- a/views/index.tt
+++ b/views/index.tt
@@ -157,6 +157,13 @@ Trying out @PerlDancer as a basis for building web apps. Very nice.</cite>
 
 <p style="display: none;">
 <cite>
+	Dancer is the first web framework I haven't wanted to pee on :-) 
+<cite>
+	- Schwern
+</p>
+
+<p style="display: none;">
+<cite>
 Hacking around using @PerlDancer and enjoying it immensely.
 <cite>
 - <a href="http://twitter.com/#!/deepakg/status/16131603503779840">deepakg</a>
