adding moonfruit.com

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -22,6 +22,11 @@ href="https://github.com/PerlDancer/advent-calendar-2010">available on GitHub</a
 </li>
 
 <li>
+<a href="http://www.moonfruit.com/">MoonFruit.com</a> is proudly built on
+Dancer, and provides a very cool service for free!
+</li>
+
+<li>
 <a href="http://perl.worldken.org/">CPAN Hubble</a> searching CPAN & GitHub by 
 Alex Kapranoff.
 Its <a href="http://github.com/kappa/app-cpanhubble">source code</a> is 
