Use GitHub API to show gravatars of all contributors.
Normally I would cache this somewhere rather than calling on every page load, as the API is rate-limited to 60 requests per minute. However since the Twitter API is used without any kind of caching, I don't think it's a major issue - The Twitter API is rate limited in the same way as GitHub.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,4 +293,13 @@ p{
 ul.spacy li {
     margin-bottom: 1em;
 }
-   
+
+
+/* The list of github contributors on the "about" page */
+.github_gravatar {
+  margin: 0 2px;
+  padding: 4px;
+  border: 1px solid #ccc;
+  background-color: #efefef;
+}
+
