--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -106,6 +106,16 @@ $.getJSON("http://twitter.com/statuses/user_timeline.json?screen_name=perldancer
 			});
 		});
 
+$.getJSON("http://github.com/api/v2/json/repos/show/sukria/dancer/contributors?callback=?",
+    function(data){
+        $.each(data.contributors, function(i,user){
+            if (user.gravatar_id && user.name) {
+                var image = '<img src="http://gravatar.com/avatar/' + user.gravatar_id + '.jpg?s=48&d=identicon" alt="' + user.name + '" title="' + user.name + '" class="github_gravatar">';
+                $("#github_contributors").append(image);
+            }
+        });
+    });
+
 </script>
 
 </body>
