--- a/views/about.tt
+++ b/views/about.tt
@@ -4,9 +4,14 @@ Dancer was inspired by <a href="http://www.sinatrarb.com">Sinatra</a>
 and has been written by <a href="http://twitter.com/sukria">Alexis Sukrieh</a>.
 Many more authors now contribute to the project - see the 
 <a href="http://search.cpan.org/dist/Dancer/AUTHORS">AUTHORS</a> file shipped
-with the distribution for the core team, and thanks to all those who have
-contributed features/patches and assistance via GitHub.
+with the distribution for the core team.
 </p>
+
+
+<h3>Contributors</h3>
+<p>Many thanks to all the contributors who have added features &amp; patches via GitHub.</p>
+<p id="github_contributors"></p>
+
 
 <h3>License</h3>
 
