add sck.to to the dancefloor

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -77,4 +77,8 @@ webapp that shows some stats about a Twitter account.
 is a basic Dancer-powered site written by David Precious.
 </li>
 
+<li>
+<a href="http://sck.to">sck.to</a> a Shorten URL system By Celogeek. Powered by Dancer, Redis and Nginx.
+</li>
+
 </ul>
