Preload download mouseover image.
Avoid annoying flicker when mousing over the button.

--- a/views/index.tt
+++ b/views/index.tt
@@ -226,3 +226,5 @@ $(document).ready(function(){
 });
 </script>
 
+<!-- Hackish mouseover pre-load -->
+<img src="/images/dcr-contain-bkg-download-hover.jpg" style="display:none">
