--- a/views/index.tt
+++ b/views/index.tt
@@ -65,8 +65,9 @@ Hello world!
 
 <div id="testimonials" style="">
 	
-	<h3>What people say about Dancer...</h3>
+	<h3><a href="/testimonials">What people say about Dancer</a>...</h3>
 
+<br clear="both" />
 <!-- adjust height of this div to fit longest quote -->
 <div style="height: 100px;">
 <% FOREACH testimonial = testimonials %>
