Adding Software Solution Services to dancefloor page.

--- a/views/dancefloor.tt
+++ b/views/dancefloor.tt
@@ -83,5 +83,11 @@ to let you explore your community on GitHub, making it possible for a Github
 user to see his or her ego-centered network, like with InMaps for LinkedIn 
 users.  StarGit was created by <a href="http://lumberjaph.net/">Franck Cuny</a>
 and <a href="http://ofnodesandedges.com/">Alexi Jacomy</a>. 
+</li>
+
+<li>
+<a href="http://www.softwaresolutionservicesinc.com">Software Solution Services
+Inc</a> is a Minnesota based technology consulting firm.
+</li>
 
 </ul>
