Centre the thumbnail and link

--- a/views/dancefloor-display.tt
+++ b/views/dancefloor-display.tt
@@ -9,9 +9,11 @@ written a website with Dancer and want it to be listed here, please
 <% FOREACH site = sites %>
 
 <div class="dancefloor-site">
-<a href="<% site.url %>"><img src="<% site.thumb_url %>"></a>
+<div align="center">
+<a href="<% site.url %>"><img src="<% site.thumb_url %>" align="center"></a>
 <br />
 <p><b><a href="<% site.url %>"><% site.title %></a></b></p>
+</div>
 <p><% site.description %></p>
 </div>
 
