Adding sukria's OSDCFR2009 slides

--- a/views/slides.tt
+++ b/views/slides.tt
@@ -1,6 +1,24 @@
 <h3>Presenting Dancer - slides from Dancer talks around the world</h3>
 
 
+
+<p><strong>
+<a href="http://www.slideshare.net/asukrieh/writing-webapps-with-perl-dancer">
+Writing webapps with Perl Dancer</a>
+</strong></p>
+
+<object id="__sse2116491" width="595" height="497"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse2116491" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object> 
+
+<p>
+You can also view and download this in
+<a href="/slides/osdcfr2009-dancer.odp">OpenOffice ODP format</a>.
+</p>
+
+
+<hr />
+
+
+
 <p><strong>
 <a href="http://www.slideshare.net/asukrieh/perl-dancer-fpw-2010-4482016">
 Perl Dancer, FPW 2010</a>
