Forgot to mention author & venue for last slides

--- a/views/slides.tt
+++ b/views/slides.tt
@@ -7,6 +7,11 @@
 Writing webapps with Perl Dancer</a>
 </strong></p>
 
+<p>
+Given by Alexis Sukrieh at OSDCfr 2009
+</p>
+
+
 <object id="__sse2116491" width="595" height="497"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" /> <param name="allowFullScreen" value="true"/> <param name="allowScriptAccess" value="always"/> <embed name="__sse2116491" src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=osdcfr2009-dancer-091003101341-phpapp02&stripped_title=writing-webapps-with-perl-dancer&userName=asukrieh" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="595" height="497"></embed> </object> 
 
 <p>
