--- a/views/about.tt
+++ b/views/about.tt
@@ -27,6 +27,12 @@ href="http://lists.perldancer.org/cgi-bin/listinfo/dancer-users">subscribe to
 the mailing list</a> if you want to contact users and developers of the project. 
 You can also <a href="http://lists.perldancer.org/pipermail/dancer-users/">read
 the list archives</a>.
+
+<form target="_blank" action="http://www.google.com/search" method="get">
+<input type=hidden name="q" value="site:lists.perldancer.org" />
+Search the mailing list: <input type=text name="q" size=20 value=""/>
+<input type="submit" name="foo" value="Search" />
+</form>
 </p>
 
 <p>
