--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title><% if title %><% title %><% else %>PerlDancer - The easiest way to write web applications with Perl<% end %></title>
-	<meta name="description" content="PerlDancer is a micro web-application framework for Perl, designed to be as effortless as possible for the developer. With PerlDancer, web development is fun again. It's a very expressive DSL for writing web applications with tons of plugins and a very dynamic community." />
-	<meta name="keywords" content="Perl, Dancer, PerlDancer, framework, micro framework, web, web application, webapps" />
+	<title><% if title %><% title %><% else %>Dancer - Perl Web Framework for easy and fun webapp development<% end %></title>
+	<meta name="description" content="PerlDancer is a micro web application framework for Perl, designed to be as effortless as possible for the developer. With PerlDancer, web development is fun again. It's a very expressive DSL for writing web applications with tons of plugins and a very dynamic community." />
+	<meta name="keywords" content="Perl, Dancer, PerlDancer, framework, web framework, micro framework, web, web application, webapps" />
 	<meta name="author" content="Alexis Sukrieh" />
 	<meta name="robots" content="index,follow" />
 	<meta name="copyright" content="Copyright 2009-2011 Alexis Sukrieh" />
